Fixed error no result

--- a/www/index.html
+++ b/www/index.html
@@ -53,8 +53,14 @@
             </div>
         </div>
         <div class="eagle">
+            <div class="popup" id="popup-not-found">
+                <span>Result not found!</span>
+            </div>
             <div class="progress-search">
                 <div class="progress-search-fill"></div>
+            </div>
+            <div class="content-result" id="top-not-found-1">
+                <span class="title">Result not found!</span>
             </div>
             <div class="panel column" id="panel_videos">
                 <div class="content">
