Fix filenaming, update ux 1

--- a/www/index.html
+++ b/www/index.html
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="group-modal medium">
+                <div class="group-modal medium" id="com" onclick="setDirectory()">
                     <div class="row">
                         <div class="do-col">
                             <span class="groupname">Save path folder:</span>
