Improve URL and fix error

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,9 @@
             <div class="progress-search">
                 <div class="progress-search-fill"></div>
             </div>
+            <div class="content-result show" id="top-welcome-message">
+                <span class="title">Welcome to <mark>pyeeltube</mark> . Please search videos first.</span>
+            </div>
             <div class="content-result" id="top-not-found-1">
                 <span class="title">Result not found!</span>
             </div>
