Fix issue url and fetch

--- a/www/index.html
+++ b/www/index.html
@@ -221,8 +221,8 @@
             <iframe id="iframe_youtube" src="https://www.youtube.com/embed/MimzMjO3NMU?enablejsapi=1&controls=1&rel=0&autoplay=1&loop=1" frameborder="0" width="362" height="205" allowfullscreen></iframe>
         </div>
 
-        <div class="download-domain">
-            <div class="modal" id="modal-1">
+        <div class="download-domain hide hide-block">
+            <div class="modal hide hide-block" id="modal-1">
                 <div class="cover">
                     <img src="image/lina.jpg" id="thumbnails" alt="">
                     <span class="duration">00:00</span>
@@ -290,8 +290,8 @@
             </div>
         </div>
 
-        <div class="url-domain">
-            <div class="modal" id="modal-2">
+        <div class="url-domain hide hide-block">
+            <div class="modal hide hide-block" id="modal-2">
                 <div class="group-modal medium">
                     <div class="do-column">
                         <span class="title">Copy YouTube link and refresh</span>
