--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,9 @@
                     <img src="icon/127_nofill_image.png" alt="" draggable="false">
                     <span>Thumbnails</span>
                 </button>
-                <button class="menu-btn">
+                <button onclick="page_about()" class="menu-btn" id="btn_menu_about">
                     <img src="icon/127_nofill_python.png" alt="" draggable="false">
-                    <span>About (coming soon)</span>
+                    <span>About</span>
                 </button>
             </div>
         </div>
@@ -206,6 +206,11 @@
                             (0) Download
                         </button>
                     </div>
+                </div>
+            </div>
+            <div class="panel disabled" id="panel_about">
+                <div id="mgcheck">
+                    asd
                 </div>
             </div>
         </div>
