Major update and fix error issue

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,8 @@
             <div class="content-result" id="top-not-found-1">
                 <span class="title">Result not found!</span>
             </div>
+
+            <!-- panel of search videos -->
             <div class="panel column" id="panel_videos">
                 <!-- EXAMPLE PANEL 1 -->
                 <!-- <div class="content">
@@ -175,6 +177,8 @@
                     </div>
                 </div> -->
             </div>
+            
+            <!-- panel of search thumbnails -->
             <div class="panel disabled" id="panel_thumbnails">
                 <div id="mgcheck">
                     <!-- EXAMPLE OF IMAGE COLLECTIONS -->
@@ -208,11 +212,31 @@
                     </div>
                 </div>
             </div>
-            <div class="panel disabled" id="panel_about">
-                <div id="mgcheck">
-                    asd
+
+            <!-- panel of about -->
+            <div class="panel column disabled" id="panel_about">
+                <div id="mgcheck" class="f-w">
+                    <div class="cover">
+                        <img src="image/suara.jpg" alt="suara">
+                    </div>
+                    <div class="profile">
+                        <div class="row">
+                            <img src="image/suarasiy.png" class="profile" alt="lina" srcset="">
+                            <div class="do-column">
+                                <a href="https://github.com/suarasiy" class="name" target="blank">Suara SIY</a>
+                                <span class="id">suarasiy</span>
+                            </div>
+                        </div>
+                        <div class="description">
+                            <span>
+                                I am Suara (20), from Indonesia. Currently 3rd semester in college. Beginner in programming and GitHub. Please be kind to me.
+                                This App is building with <mark>Python</mark> and <mark>JavaScript</mark> with eel library.
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
         <span class="pathbar" id="pathbar" onclick="openDir();">📁 Save path: </span>
         <div class="video-player" id="video_player" video-status="show">
