Adding percentage and improve ui

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,9 @@
                     <img src="icon/127_nofill_python.png" alt="" draggable="false">
                     <span>About</span>
                 </button>
+                <span class="bottom">
+                    pyeeltube <mark><a href="https://github.com/suarasiy/pyeeltube/releases" target="_blank">V0.1</a></mark>. 2020-2021. <mark><a href="https://github.com/suarasiy" target="_blank">@suarasiy</a></mark>.
+                </span>
             </div>
         </div>
         <div onclick="toggle(this)" id="menu-cover" class="hidden"></div>
@@ -223,7 +226,7 @@
                         <div class="row">
                             <img src="image/suarasiy.png" class="profile" alt="lina" srcset="">
                             <div class="do-column">
-                                <a href="https://github.com/suarasiy" class="name" target="blank">Suara SIY</a>
+                                <a href="https://github.com/suarasiy" class="name" target="_blank">Suara SIY</a>
                                 <span class="id">suarasiy</span>
                             </div>
                         </div>
@@ -250,6 +253,7 @@
             <iframe id="iframe_youtube" src="https://www.youtube.com/embed/MimzMjO3NMU?enablejsapi=1&controls=1&rel=0&autoplay=1&loop=1" frameborder="0" width="362" height="205" allowfullscreen></iframe>
         </div>
 
+        <!-- .hide .hide-block -->
         <div class="download-domain hide hide-block">
             <div class="modal hide hide-block" id="modal-1">
                 <div class="cover">
@@ -297,6 +301,7 @@
                                 <img src="icon/127_globe.png" alt="" class="icon">
                                 <div class="do-column">
                                     <span class="infotext mono" id="action_text_status">Ready</span>
+                                    <span class="percentage" id="progress_percent">0%</span>
                                     <div class="progressbar">
                                         <div class="fill ready" id="action_progress"></div>
                                     </div>
